--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pixi.js": "^8.1.6",
     "vue": "^3.4.27"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.3",
     "@vitejs/plugin-vue": "^5.0.5",
-    "autoprefixer": "^10.4.19",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.4.0",
     "eslint-plugin-vue": "^9.26.0",
     "postcss": "^8.4.38",
