--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pixi.js": "^8.1.6",
+    "snappyjs": "^0.7.0",
     "vue": "^3.4.27"
   },
   "devDependencies": {
