--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pixi-filters": "^6.0.4",
     "pixi.js": "^8.1.6",
     "snappyjs": "^0.7.0",
     "vue": "^3.4.27"
