--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pixi-filters": "^6.0.4",
-    "pixi.js": "^8.1.6",
+    "regl": "^2.1.0",
     "snappyjs": "^0.7.0",
-    "vue": "^3.4.27"
+    "vue": "^3.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.3",
@@ -23,6 +22,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.12"
+    "vite": "^5.2.12",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
